web/book/tests/documentation/snapshots/documentation__book__reference__declarations__functions__piping-values-into-functions__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "let fahrenheit_to_celsius = temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (temp_f | fahrenheit_to_celsius)\n"
---
SELECT
  *,
  (temp_f - 32) / 1.8 AS temp_c
FROM
  cities
